# invoice-ia-pipeline

./: .env_example  README.md  main.py  processed_history.json  pyproject.toml
database/: database.py
schemas/: schemas.py
src/: extractor.py  llm_client.py
src/llm/: llm_client.py
src/models/: models.py
src/services/: invoice_service.py  s3_service.py
tests/: test_schemas.py
